<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sean_ryall.calcassignment.MainActivity"
    android:background="#000000"
    android:padding="5dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameLayout"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tvNum"
                android:layout_gravity="left|top"
                android:background="#141414"
                android:text="@string/tvNumbers"
                android:textSize="50sp"
                android:textAlignment="textEnd"
                android:phoneNumber="false"
                android:textColor="#73ffe5"
                android:padding="5dp" />

            <TextView
                android:layout_width="131dp"
                android:layout_height="30dp"
                android:text="New Text"
                android:id="@+id/textView" />

            <Switch
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:text="ON/OFF"
                android:id="@+id/switch1"
                android:checked="false"
                android:textColor="#cec7a4"
                android:layout_gravity="bottom|right" />
        </LinearLayout>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="#beb288"
        android:measureWithLargestChild="false"
        android:paddingTop="3dp"
        android:stretchColumns="0,1,2,3"
        android:shrinkColumns="0,1,2,3"
        android:touchscreenBlocksFocus="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:minHeight="72dp"
            android:nestedScrollingEnabled="false">

            <Button
                android:text="@string/btnClear"
                android:id="@+id/btnClr"
                android:layout_column="0"
                android:layout_height="match_parent"
                android:background="#fe6a00"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnPlusMinus"
                android:id="@+id/btnPM"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:background="#818181"
                android:textColor="#ffffff"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnBackspace"
                android:id="@+id/btnDel"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:background="#818181"
                android:textColor="#ffffff"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnDiv"
                android:id="@+id/btnDiv"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:background="#818181"
                android:textColor="#ffffff"
                android:layout_margin="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:minHeight="72dp"
            android:nestedScrollingEnabled="false">

            <Button
                android:text="@string/btn7"
                android:id="@+id/btn7"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btn8"
                android:id="@+id/btn8"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btn9"
                android:id="@+id/btn9"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnMult"
                android:id="@+id/btnMult"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#818181"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:layout_margin="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:minHeight="72dp"
            android:nestedScrollingEnabled="false">

            <Button
                android:text="@string/btn4"
                android:id="@+id/btn4"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btn5"
                android:id="@+id/btn5"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btn6"
                android:id="@+id/btn6"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnMinus"
                android:id="@+id/btnMinus"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#818181"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:layout_margin="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:minHeight="72dp"
            android:nestedScrollingEnabled="false">

            <Button
                android:text="@string/btn1"
                android:id="@+id/btn1"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btn2"
                android:id="@+id/btn2"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btn3"
                android:id="@+id/btn3"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnPlus"
                android:id="@+id/btnPlus"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#818181"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:layout_margin="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="2dp"
            android:minHeight="72dp"
            android:nestedScrollingEnabled="false">

            <Button
                android:text="@string/btn0"
                android:id="@+id/btn0"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnDec"
                android:id="@+id/btnDec"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:background="#252525"
                android:layout_margin="2dp" />

            <Button
                android:text="@string/btnEqual"
                android:id="@+id/btnEqual"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="#818181"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:layout_margin="2dp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
